--- a/default.css
+++ b/default.css
@@ -1,12 +1,24 @@
-h1 {
-    color: red;
-    text-align: center;
+body {
+    background: #f4f4f4;
+    font-family: arial, sans-serif;
+    line-height: 1.5em; /* 행간 */
 }
 
-body {
+#container {
+    border: 1px #ccc solid; /* solid 실선 border 테두리 */
+    margin: 0 10px 0 10px; /* 12시부터 시계방향 */
+    width: 800px;
+    margin: 30px auto;
+    overflow: hidden; /* scroll, auto 도 있음 */
+}
+
+.highlight {
     color: red;
-    height: 50vh;
-    background-color: #000;
-    background-image: url('https://cdn.discordapp.com/attachments/1083310003055767642/1111161877578383381/background.jpg');
-    background-position: center center;
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.left-side {
+    float: left;
+    width: 50%;
 }
