--- a/default20230526.css
+++ b/default20230526.css
@@ -1,3 +1,275 @@
-h1 {
+ h1 {
     color: red;
 }
+
+#border-img {
+    border: 10px solid;
+    padding: 10px;
+    border-image: url('border.png') 30round;
+}
+
+#my-bg {
+    background-image: url('border.png'), url('background.jpg');
+    background-position: left top, right bottom;
+    background-repeat: repeat, no-repeat;
+    padding: 20px;
+    background-size: 50px 50px, cover;
+}
+
+#grad1 {
+    width:  200px;
+    height: 50px;
+    background: linear-gradient(to bottom right, pink, purple);
+}
+
+#grad2 {
+    width:  200px;
+    height: 50px;
+    background: linear-gradient(to bottom right, red, yellow);
+}
+
+#grad3 {
+    width:  200px;
+    height: 50px;
+    background: radial-gradient(red, yellow, green);
+}
+
+#grad4 {
+    width:  200px;
+    height: 50px;
+    background: radial-gradient(circle, lightblue, darkblue);
+}
+
+
+#rounded1 {
+    background: lightblue;
+    color: white;
+    width: 200px;
+    padding: 10px;
+    height: 140px;
+    border-radius: 50%;
+}
+
+#rounded2 {
+    background: orange;
+    color: white;
+    width: 200px;
+    padding: 10px;
+    height: 140px;
+    border-radius: 30%;
+}
+
+#rounded3 {
+    background: pink;
+    color: white;
+    width: 200px;
+    padding: 10px;
+    height: 140px;
+    border-radius: 70%;
+}
+
+img {
+    width: 300px;
+    max-height: 300px;
+    border-radius: 50%;
+}
+
+article {
+    column-count: 3;
+    column_gap: 40px;
+    column-rule: 1px solid coral;
+}
+
+article h1 {
+    column-span: all;
+}
+
+.textbox1 {
+    border: 2px solid;
+    padding: 20px;
+    width: 300px;
+    overflow: auto;
+    resize: both;
+}
+
+.textbox2 {
+    margin: 20px;
+    padding: 10px;
+    width: 300px;
+    height: 100px;
+    border: 1px solid black;
+    outline: 1px solid red;
+    outline-offset: 10px;
+}
+
+.flex-container {
+    display: flex;
+    justify-content: spacd-around;
+    width: 400px;
+    height: 350px;
+    background-color: black;
+}
+
+.flex-item {
+    background-color: lightblue;
+    width: 100px;
+    height: 100px;
+    margin: 10px;
+
+}
+
+.first {
+    order: -1;
+}
+#box0 {
+    width: 100px;
+    height: 100px;
+    background: #000;
+    transition: width 2s, height 4s;
+    transition-timing-function: linear;
+}
+
+#box0:hover {
+    width: 300px;
+    height: 300px;
+}
+
+#box2 {
+    width: 100px;
+    height: 100px;
+    position: relative;
+    background-color: red;
+    animation-name: colorchange;
+    animation-duration: 5s;
+}
+
+@keyframes colorchange {
+    0% {
+        background-color: red;
+        left: 0;
+        top: 0;
+    }
+
+    25% {
+        background-color: yellow;
+        left: 200px;
+        top: 0;
+    }
+
+    50% {
+        background-color: green;
+        left: 200px;
+        top: 200px;
+    }
+
+    75% {
+        background-color: blue;
+        left: 0;
+        top: 200px;
+    }
+
+    100% {
+        background-color: red;
+        left: 0;
+        top: 0;
+    }
+}
+
+
+
+h1.text1 {
+    text-shadow:  2px 2px 5px red;
+}
+
+h1.text2 {
+    color: #ffffff;
+    text-shadow: 2px 2px 5px black;
+}
+
+hq.text3 {
+    text-shadow: 0 0 3px #ff0000, 0 0 5px #0000ff;
+}
+
+#box1 {
+    width: 300px;
+    height: 200px;
+    background-color: red;
+    box-shadow: 10px 10px 5px grey;
+}
+
+.card {
+    width:250px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
+}
+
+.card-header {
+    background-color: #ff0000;
+    color: #fff;
+    padding: 10px;
+    font-size: 40px;
+}
+
+.card-container {
+    padding:10px;
+}
+
+
+a:hover {
+    color: red;
+    font-weight: bold;
+}
+
+a:active {
+    color:green;
+    font-weight: bold;
+}
+
+.myform input:focus {
+    background: pink;
+    width: 300px;
+}
+
+.mylist li:first-child {
+    color: green;
+    font-weight: bold;
+}
+
+.mylist li:last-child {
+    color: red;
+    font-weight: bold;
+}
+
+.mylist li:nth-child(3n+3) {
+    color: orange;
+    font-weight: bold;
+}
+
+.mylist li:nth-child(even) {
+    background: yellow;
+    font-weight: bold;
+}
+
+.mylist li:nth-child(odd) {
+    background: gray;
+    font-weight: bold;
+}
+
+.wrapper {
+    border: #000 1px dashed;  solid 실선 dashed 점선
+    width: 600px;
+    height: 400px;
+    position: relative;
+    left: 50px;
+    top: 100px;
+}
+
+.inside {
+    border: #ff0000 1px solid;
+    width: 200px;
+    height: 100px;
+    position: absolute;
+    left: 50px;
+    top: 20px;
+}
+
