--- a/HTML-CSS 실습/default20230526.css
+++ b/HTML-CSS 실습/default20230526.css
@@ -153,7 +153,7 @@ article h1 {
     25% {
         background-color: yellow;
         left: 200px;
-        top: 0;
+        top: 0;정
     }
 
     50% {
