polls vote 함수 구현

--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,12 +1,24 @@
-<!--views.py > index > context > latest_question_list-->
-{% if latest_question_list %}
-    <ul>
-        {% for question in latest_question_list %}
-            <li>
-                {{ question.question_text }}
-            </li>
-        {% endfor %}
-    </ul>
-{% else %}
-    <p>투표가 없습니다.</p>
-{% endif %}
+<!DOCTYPE html>
+<html lang="ko">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Index</title>
+</head>
+
+<body>
+    {% if latest_question_list %}
+        <ul>
+            {% for question in latest_question_list %}
+                <li>
+                    {{ question.question_text}} | {{ question.pub_date}}
+                </li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <h1> 투표가 없습니다. </h1>
+    {% endif %}
+</body>
+
+</html>
