--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+<!--    {% extends "base.html" %}-->
     {% if latest_question_list %}
         <ul>
             {% for question in latest_question_list %}
