--- a/templates/home.html
+++ b/templates/home.html
@@ -3,10 +3,9 @@
 {% block content %}
     <h1>Django Applications</h1>
     <ul>
-        {% for appname in app_list %}
-            {% with appname|add:":index" as url_var %}
-                <li><a href="{% url url_var %}">{{ appname }}</a></li>
-            {% endwith %}
+        {% for key, value in verbose_dict.items %}
+            {% appname|add:":index" as url_var %}
+                <li><a href="{% url key|add:':index' %}">{{ appname }}</a></li>
         {% endfor %}
     </ul>
 {% endblock content %}
